mybatis graalvm adjust