@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>maven-graalvm</artifactId>
+    <groupId>com.graalvm</groupId>
+    <artifactId>graalvm-maven</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
@@ -49,32 +49,18 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.graalvm.buildtools</groupId>
-                <artifactId>native-maven-plugin</artifactId>
-                <extensions>true</extensions>
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>compile</goal>-->
-<!--                            <goal>build</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-                <configuration>
-                    <mainClass>com.graalvm.Application</mainClass>
-                    <buildArgs>
-                        <arg>--enable-preview</arg>
-                    </buildArgs>
-<!--                    <buildArgs>-->
-<!--                        <arg>&#45;&#45;no-fallback</arg>-->
-<!--                        <arg>&#45;&#45;report-unsupported-elements-at-runtime</arg>-->
-<!--                        <arg>&#45;&#45;verbose</arg>-->
-<!--                    </buildArgs>-->
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+                <configuration>
+                    <buildArgs combine.children="append">
+                        <buildArg>--enable-url-protocols=http</buildArg>
+                    </buildArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
